# policyengine-uk-data

./: .buildinfo  .env  .gitignore  =0.0.16  =1.0.1  CHANGELOG.md  CLAUDE.md  LA_methodology.html  Makefile  README.md  SALARY_SACRIFICE_VARIABLE_SUMMARY.md  analysis.ipynb  bhc.ipynb  changelog.yaml  changelog_entry.yaml  check_land_value_targets.py  compare_loss_functions.py  config.json  constituency-methodology.json  constituency_methodology.html  frs.ipynb  genindex.html  imputations.json  index.html  index.json  intro.html  issue_audit.md  la-methodology.json  methodology.json  myst.search.json  myst.xref.json  objects.inv  pension-contributions.json  pension_contributions.html  pyproject.toml  scotland_statistics.ipynb  search.html  searchindex.js  sitemap.xml  test.ipynb  (+6 more)
.beads/: issues.jsonl
.github/: CONTRIBUTING.md  bump_version.py  fetch_version.py
.github/workflows/: changelog_entry.yaml  ci_cd.yaml  docs.yaml  publish_package.yaml  pull_request.yaml  push.yaml  upload-public-transfer-dataset.yaml  versioning.yaml
analysis/: visualise_weight_diagnostics.py
changelog.d/: 218.md  279.md  281.md  286.added.md  287.added.md  314.fixed.md  316.md  317.md  321.fixed.md  341.md  345.md  357.md  368.md  370.md  375.md  378.md  402.md  409.md  414.md  423.added.md  428.md  429.md  431.md  433.md  436.md  64.md  73.md  add-bundle-release-manifest.changed.md  add-claude-plugin.added.md  add-ons-land-value-targets.added.md  add-second-stage-qrf-frs-vars.changed.md  adversarial-weight-regularisation.added  build-provenance-release-manifest.changed.md  calibration-stage-heartbeats.fixed.md  ci-progress-heartbeats.fixed.md  codex-frs-own-right-benefits.added.md  codex-trace-tro-export.changed.md  d1-tax-rate.fixed.md  deterministic-property-purchased.fixed.md  disability-benefit-categories.changed.md  (+47 more)
changelog.d/fixed/: 68.md
constituency-methodology/: index.html
data/: download_private_prerequisites.py
docker/: docs.Dockerfile
docs/: LA_methodology.ipynb  _config.yml  _toc.yml  api-reference.md  api_reference.md  constituency_methodology.ipynb  data-sources.md  data_sources.md  examples.md  getting-started.md  getting_started.md  glossary.md  imputations.md  index.html  intro.md  methodology.ipynb  myst.yml  oa_calibration_pipeline.md  panel_downstream.md  post_ctr_council_tax_calibration.md  public_transfer_dataset.md  targets_coverage.md  validation.ipynb
docs/validation/: constituencies.ipynb  local_authorities.ipynb  national.ipynb
imputations/: index.html
la-methodology/: index.html
methodology/: index.html
pension-contributions/: index.html
policyengine_uk_data/: __init__.py  definitions.py
policyengine_uk_data.egg-info/: SOURCES.txt
policyengine_uk_data/assets/: __init__.py  calibration.py  checks.py  frs.py  imputations.py  outputs.py  raw_surveys.py  targets.py
policyengine_uk_data/calibration/: clone_and_assign.py  long_geography.py  matrix_builder.py  oa_assignment.py  oa_crosswalk.py  publish_local_h5s.py
policyengine_uk_data/datasets/: __init__.py  create_datasets.py  disability_benefits.py  enhanced_cps.py  firm.py  frs.py  frs_release.py  policybench_transfer.py  private_releases.py  spi.py  ukhls.py  yearly_snapshots.py
policyengine_uk_data/db/: etl.py  query.py  schema.py
policyengine_uk_data/diagnostics/: __init__.py  __main__.py  generative_model.py  influence.py  offspring.py  recalibrate.py
policyengine_uk_data/explorer/: docker-compose.yml
policyengine_uk_data/io_managers/: __init__.py  dataset.py  weights.py
policyengine_uk_data/models/: __init__.py  targets.py
policyengine_uk_data/parameters/: __init__.py
policyengine_uk_data/resources/: __init__.py  bucket.py  compute.py  database.py
policyengine_uk_data/sources/: __init__.py  hmrc_hydrocarbon_oils.py  road_fuel_volume.py
policyengine_uk_data/storage/: UC_DATA_SOURCES.md  council_tax_bands.csv  council_tax_bands_2024.csv  demographics.csv  dfc-ni-uc-stats-supp-tables-may-2025.ods  download_completed_datasets.py  download_private_prerequisites.py  enhanced_cps_2025.h5  enhanced_cps_manifest_2025.json  households_by_la_2025.csv  incomes.csv  incomes_projection.csv  la_council_tax.csv  la_count_households.xlsx  la_land_values.csv  la_private_rents_median.xlsx  la_tenure.xlsx  migrate_to_uk_single_year_datasets.py  nhs_consumption_by_age_gender.csv  policybench_transfer_2025.h5  policybench_transfer_source_2025.csv  regional_land_values.csv  tax_benefit.csv  uc_la_households.xlsx  uc_national_payment_dist.xlsx  uc_pc_households.xlsx  upload_completed_datasets.py  upload_private_prerequisites.py  upload_public_transfer_dataset.py  upload_yearly_snapshots.py  uprating_factors.csv  uprating_growth_factors.csv  write_enhanced_cps_manifest.py  ~$local_authority_ons_income.xlsx
policyengine_uk_data/targets/: __init__.py  build_loss_matrix.py  cli.py  database.py  models.py  registry.py  schema.py  seed.py  sources.yaml
policyengine_uk_data/tests/: conftest.py  test_advance_year.py  test_age_dataset_sex_specific_mortality.py  test_age_demographics.py  test_aggregates.py  test_apply_children_leaving_home.py  test_apply_employment_transitions.py  test_apply_income_decile_transitions.py  test_apply_marriages.py  test_apply_migration.py  test_apply_separations.py  test_build_environment.py  test_bus_fare_spending_in_dataset.py  test_calibrate_l0.py  test_calibrate_save.py  test_calibrate_smoothness_integration.py  test_calibration_progress.py  test_changelog_encoding.py  test_child_limit.py  test_childcare.py  test_clone_and_assign.py  test_conftest_fixtures.py  test_consumption_weeks_rng.py  test_dataset_sanity.py  test_datasets.py  test_esa_jsa_targets.py  (+82 more)
tests/: test_frs.py
validation/: constituencies.html  index.html  local_authorities.html  national.html
(+205 files in other folders)
