[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine_uk_data"
version = "1.17.3"
description = "A package to create representative microdata for the UK."
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "policyengine-core>=3.19.4",
    "requests",
    "tqdm",
    "tabulate",
    "huggingface_hub",
    "policyengine",
    "google-cloud-storage",
    "google-auth",
    "policyengine-uk>=2.43.5",
    "microcalibrate>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "torch",
    "tables",
    "furo",
    "jupyter-book",
    "yaml-changelog>=0.1.7",
    "itables",
    "quantile-forest",
    "build",
]

[tool.setuptools]
packages = ["policyengine_uk_data"]
include-package-data = true

[tool.setuptools.package-data]
"policyengine_uk_data" = ["**/*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
''' 
