[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine_uk_data"
version = "1.40.3"
description = "A package to create representative microdata for the UK."
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "policyengine-core>=3.19.4",
    "requests",
    "tqdm",
    "tabulate",
    "huggingface_hub",
    "policyengine",
    "google-cloud-storage",
    "google-auth",
    "policyengine-uk>=2.43.5",
    "microcalibrate>=0.18.0",
    "microimpute>=1.0.1",
    "black>=25.1.0",
    "rich>=13.0.0",
    "odfpy",
    "pandas",
    "openpyxl",
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "torch",
    "tables",
    "furo",
    "yaml-changelog>=0.1.7",
    "itables",
    "quantile-forest",
    "build",    "towncrier>=24.8.0",

]

[tool.setuptools]
packages = ["policyengine_uk_data"]
include-package-data = true

[tool.setuptools.package-data]
"policyengine_uk_data" = ["**/*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["policyengine_uk_data/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.towncrier]
package = "policyengine_uk_data"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
